--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -35,8 +35,13 @@
                     <a class="nav-link" href="{% url 'products:index' %}">Каталог <i class="fas fa-shopping-bag"></i> </a>
                 </li>
                 <li class="nav-item">
+                {% if user.is_authenticated == False %}
                     <a class="nav-link" href="{% url 'users:login' %}">Войти <i class="fas fa-sign-in-alt"></i></a>
+                {% else %}
+                    <a class="nav-link" href="{% url 'users:profile' %}">{{ user.first_name }} <i class=""></i></a>
+                {% endif %}
                 </li>
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
@@ -44,15 +49,21 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li>
-                            <a class="dropdown-item" href="{% url 'users:profile' %}">Профиль</a>
+                            {% if user.is_authenticated %}
+                                <a class="dropdown-item" href="{% url 'users:profile' %}">Профиль</a>
+                            {% else %}
+                                <a class="dropdown-item" href="{% url 'users:login' %}">Профиль</a>
+                            {% endif %}
                         </li>
                         <li><a class="dropdown-item" href="orders/orders.html">Заказы</a></li>
-                        <li><a class="dropdown-item" href="#">Админ-панель</a></li>
+                        {% if user.is_superuser or user.is_staff %}
+                            <li><a class="dropdown-item" href= {% url 'admin:index' %}>Админ-панель</a></li>
+                        {% endif %} 
                         <li>
                             <hr class="dropdown-divider">
                         </li>
                         <li>
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="{% url 'users:logout' %}">
                                 Выйти
                             </a>
                         </li>
