--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -11,19 +11,7 @@
 	<div class="container">
 
     <div class="row">
-
-        <div class="col-lg-3">
-
-            <h1 class="my-4">Store</h1>
-            <div class="list-group">
-                <a href="#" class="list-group-item">Новинки</a>
-                <a href="#" class="list-group-item">Одежда</a>
-                <a href="#" class="list-group-item">Обувь</a>
-                <a href="#" class="list-group-item">Аксессуары</a>
-                <a href="#" class="list-group-item">Подарки</a>
-            </div>
-
-        </div>
+        {% include 'products/categories.html' %}
         <!-- /.col-lg-3 -->
 
         <div class="col-lg-9">
