--- a/products/templates/products/paginator.html
+++ b/products/templates/products/paginator.html
@@ -1,25 +1,25 @@
 <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center">
         <!-- Кнопка "Назад" -->
-        <li class="page-item {% if not products.has_previous %} disabled {% endif %}">
+        <li class="page-item {% if not page_obj.has_previous %} disabled {% endif %}">
             <a class="page-link"
-               href="{% if products.has_previous %}{% url 'products:paginator' products.previous_page_number %}{% else %}#{% endif %}"
-               tabindex="-1" aria-disabled="{% if not products.has_previous %}true{% else %}false{% endif %}">
+               href="{% if page_obj.has_previous %}{% url 'products:paginator' page_obj.previous_page_number %}{% else %}#{% endif %}"
+               tabindex="-1" aria-disabled="{% if not page_obj.has_previous %}true{% else %}false{% endif %}">
                 Prev
             </a>
         </li>
 
         <!-- Цикл по страницам -->
-        {% for page in products.paginator.page_range %}
-            <li class="page-item {% if products.number == page %} active {% endif %}">
+        {% for page in paginator.page_range %}
+            <li class="page-item {% if page_obj.number == page %} active {% endif %}">
                 <a class="page-link" href="{% url 'products:paginator' page %}">{{ page }}</a>
             </li>
         {% endfor %}
 
         <!-- Кнопка "Вперёд" -->
-        <li class="page-item {% if not products.has_next %} disabled {% endif %}">
+        <li class="page-item {% if not page_obj.has_next %} disabled {% endif %}">
             <a class="page-link"
-               href="{% if products.has_next %}{% url 'products:paginator' products.next_page_number %}{% else %}#{% endif %}">
+               href="{% if page_obj.has_next %}{% url 'products:paginator' page_obj.next_page_number %}{% else %}#{% endif %}">
                 Next
             </a>
         </li>
