--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -38,7 +38,7 @@
                 {% if user.is_authenticated == False %}
                     <a class="nav-link" href="{% url 'users:login' %}">Войти <i class="fas fa-sign-in-alt"></i></a>
                 {% else %}
-                    <a class="nav-link" href="{% url 'users:profile' %}">{{ user.first_name }} <i class=""></i></a>
+                    <a class="nav-link" href="{% url 'users:profile' user.id %}">{{ user.first_name }} <i class=""></i></a>
                 {% endif %}
                 </li>
 
@@ -50,7 +50,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li>
                             {% if user.is_authenticated %}
-                                <a class="dropdown-item" href="{% url 'users:profile' %}">Профиль</a>
+                                <a class="dropdown-item" href="{% url 'users:profile' user.id %}">Профиль</a>
                             {% else %}
                                 <a class="dropdown-item" href="{% url 'users:login' %}">Профиль</a>
                             {% endif %}
