--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -58,12 +58,13 @@
                         <li><a class="dropdown-item" href="orders/orders.html">Заказы</a></li>
                         {% if user.is_superuser or user.is_staff %}
                             <li><a class="dropdown-item" href= {% url 'admin:index' %}>Админ-панель</a></li>
-                        {% endif %} 
+                        {% endif %}
                         <li>
                             <hr class="dropdown-divider">
                         </li>
                         <li>
-                            <a class="dropdown-item" href="{% url 'users:logout' %}">
+                            <!-- Ссылка на выход с использованием метода POST -->
+                            <a class="dropdown-item" href="#" onclick="document.getElementById('logout-form').submit();">
                                 Выйти
                             </a>
                         </li>
@@ -73,6 +74,11 @@
         </div>
     </div>
 </nav>
+
+<!-- Скрытая форма для выхода -->
+<form id="logout-form" action="{% url 'users:logout' %}" method="post" style="display: none;">
+    {% csrf_token %}
+</form>
 
 {% block content %}{% endblock %}
 
